--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "sonner": "^2.0.3",
+    "sweetalert2": "^11.21.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.2"
   },
